--- a/index.html
+++ b/index.html
@@ -8,12 +8,37 @@
 </head>
 <body>
     <header>
+        <!-- Logo con immagine di sfondo -->
         <div id="logo">
             <img src="./img/logo.svg" alt="" class="margin" id="width">
         </div>
     </header>
     <main>
+        <!-- Titolo con immagini -->
+        <section class="margin">
+            <h1 class="font size1">
+                Internet deve essere al servizio del "bene<br>
+                 pubblico": il manifesto di Tim Berners-Lee
+            </h1>
+            <div class="font">Scritto da The Booleaner</div>
+            <div class="font size2">il 10/10/2020</div>
+            <br>
+            <img src="./img/tim-1.jpg" alt="John S. and James L. Knight Foundation, by Scott Henrichsen">
+            <br>
+            <img src="./img/tim-2.jpg" alt="Wikimedia, by Paul Clarke">
+            <div class="font size2">
+                1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>
+                2nd Photo: Wikimedia, by Paul Clarke
+            </div>
+        </section>
+        <!-- Primo paragrafo con lista -->
+        <section>
 
+        </section>
+        <!-- Tabella e secondo paragrafo -->
+        <section>
+
+        </section>
     </main>
     <footer>
 
