--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/style.css">
 </head>
 <body>
     <header>
@@ -15,16 +15,19 @@
     </header>
     <main>
         <!-- Titolo con immagini -->
-        <section class="margin">
+        <section class="margin right">
             <h1 class="font size1">
-                Internet deve essere al servizio del "bene<br>
+                Internet deve essere al servizio del "bene
                  pubblico": il manifesto di Tim Berners-Lee
             </h1>
-            <div class="font">Scritto da The Booleaner</div>
-            <div class="font size2">il 10/10/2020</div>
+            <div class="font grey-text">
+                Scritto da <span class="blue-text">The Booleaner</span>
+            </div>
+            <div class="font size2 grey-text">
+                il 10/10/2020
+            </div>
             <br>
             <img src="./img/tim-1.jpg" alt="John S. and James L. Knight Foundation, by Scott Henrichsen">
-            <br>
             <img src="./img/tim-2.jpg" alt="Wikimedia, by Paul Clarke">
             <div class="font size2">
                 1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>
@@ -32,11 +35,11 @@
             </div>
         </section>
         <!-- Primo paragrafo con lista -->
-        <section>
+        <section class="margin right">
 
         </section>
         <!-- Tabella e secondo paragrafo -->
-        <section>
+        <section class="margin right">
 
         </section>
     </main>
