--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
         </section>
         <!-- Primo paragrafo con lista -->
         <section class="margin right">
-
+            <p class="font">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum harum ex odio minus quo, unde quia, nisi distinctio veniam consectetur minima, porro officia ducimus dignissimos nobis explicabo iste doloribus voluptatem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="yellow">Rem soluta laboriosam ut laborum in nemo delectus ea voluptatibus optio fuga commodi adipisci voluptatum,</span> nam totam dolorum ducimus quo magni voluptatem.
+            </p>
+            <ul>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At atque temporibus distinctio porro, fugit, voluptatum enim tempora odit error voluptatibus est eum repellendus, modi totam consequuntur quam molestias vero aspernatur.</li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At atque temporibus distinctio porro, fugit, voluptatum enim tempora odit error voluptatibus est eum repellendus, modi totam consequuntur quam molestias vero aspernatur.</li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At atque temporibus distinctio porro, fugit, voluptatum enim tempora odit error voluptatibus est eum repellendus, modi totam consequuntur quam molestias vero aspernatur.</li>
+            </ul>
         </section>
         <!-- Tabella e secondo paragrafo -->
         <section class="margin right">
