--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </div>
         </section>
         <!-- Primo paragrafo con lista -->
-        <section class="margin right">
-            <p class="font">
+        <section class="margin right font">
+            <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum harum ex odio minus quo, unde quia, nisi distinctio veniam consectetur minima, porro officia ducimus dignissimos nobis explicabo iste doloribus voluptatem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="yellow">Rem soluta laboriosam ut laborum in nemo delectus ea voluptatibus optio fuga commodi adipisci voluptatum,</span> nam totam dolorum ducimus quo magni voluptatem.
             </p>
             <ul>
@@ -46,8 +46,36 @@
             </ul>
         </section>
         <!-- Tabella e secondo paragrafo -->
-        <section class="margin right">
-
+        <section class="margin right font">
+            <table>
+                <thead id="table-head">
+                    <tr>
+                        <th class="tabel-margin">Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                        <th>Lorem, ipsum dolor.</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="table-body">
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ut quisquam ullam sunt reiciendis, id vel. Voluptatibus non, dignissimos mollitia eveniet velit maxime molestiae rem modi earum quaerat eaque quis.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ut quisquam ullam sunt reiciendis, id vel. Voluptatibus non, dignissimos mollitia eveniet velit maxime molestiae rem modi earum quaerat eaque quis.</td>
+                    </tr>
+                    <tr class="table-body">
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor.</td>
+                        <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ut quisquam ullam sunt reiciendis, id vel. Voluptatibus non, dignissimos mollitia eveniet velit maxime molestiae rem modi earum quaerat eaque quis.</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia placeat reiciendis dolorem illo esse impedit obcaecati modi laborum. Enim, nulla. Quibusdam, molestias nam. Nobis, doloribus. <span class="yellow">Adipisci fuga porro alias perferendis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem vel dicta asperiores cumque, soluta provident unde.</span> Dolores facere iusto consequuntur temporibus mollitia provident odio, cupiditate, adipisci enim quam ipsam laborum.
+            </p>
         </section>
     </main>
     <footer>
