footer and last commit
many mistakes but i'm done for today

--- a/index.html
+++ b/index.html
@@ -78,8 +78,19 @@
             </p>
         </section>
     </main>
-    <footer>
-
+    <footer class="margin right font">
+        <div class="grey-text">
+            <br>
+            <strong> Potrebbero anche interessarti </strong>
+        </div>
+        <br>
+        <div id="picture1">
+            <strong> ipsum dolor.</strong>
+        </div>
+        <br>
+        <div id="picture2">
+            <strong> ipsum dolor.</strong>
+        </div>
     </footer>
 </body>
 </html>
