--- a/index.html
+++ b/index.html
@@ -15,18 +15,16 @@
     </header>
     <main>
         <!-- Titolo con immagini -->
-        <section class="margin right">
-            <h1 class="font size1">
-                Internet deve essere al servizio del "bene
-                 pubblico": il manifesto di Tim Berners-Lee
+        <section class="margin">
+            <h1 class="size1">
+                Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
             </h1>
-            <div class="font grey-text">
-                Scritto da <span class="blue-text">The Booleaner</span>
+            <div class="grey-text">
+                Scritto da <span class="blue-text"><strong>The Booleaner</strong></span>
             </div>
-            <div class="font size2 grey-text">
+            <div class="size2 grey-text">
                 il 10/10/2020
             </div>
-            <br>
             <img src="./img/tim-1.jpg" alt="John S. and James L. Knight Foundation, by Scott Henrichsen">
             <img src="./img/tim-2.jpg" alt="Wikimedia, by Paul Clarke">
             <div class="font size2">
@@ -35,7 +33,7 @@
             </div>
         </section>
         <!-- Primo paragrafo con lista -->
-        <section class="margin right font">
+        <section class="margin right">
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum harum ex odio minus quo, unde quia, nisi distinctio veniam consectetur minima, porro officia ducimus dignissimos nobis explicabo iste doloribus voluptatem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="yellow">Rem soluta laboriosam ut laborum in nemo delectus ea voluptatibus optio fuga commodi adipisci voluptatum,</span> nam totam dolorum ducimus quo magni voluptatem.
             </p>
@@ -46,9 +44,9 @@
             </ul>
         </section>
         <!-- Tabella e secondo paragrafo -->
-        <section class="margin right font">
+        <section class="margin right">
             <table>
-                <thead id="table-head">
+                <thead>
                     <tr>
                         <th class="tabel-margin">Lorem, ipsum dolor.</th>
                         <th>Lorem, ipsum dolor.</th>
@@ -56,7 +54,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="table-body">
+                    <tr class="bluebg">
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ut quisquam ullam sunt reiciendis, id vel. Voluptatibus non, dignissimos mollitia eveniet velit maxime molestiae rem modi earum quaerat eaque quis.</td>
@@ -66,7 +64,7 @@
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ut quisquam ullam sunt reiciendis, id vel. Voluptatibus non, dignissimos mollitia eveniet velit maxime molestiae rem modi earum quaerat eaque quis.</td>
                     </tr>
-                    <tr class="table-body">
+                    <tr class="bluebg">
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor.</td>
                         <td>Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ut quisquam ullam sunt reiciendis, id vel. Voluptatibus non, dignissimos mollitia eveniet velit maxime molestiae rem modi earum quaerat eaque quis.</td>
